@@ -1,28 +1,21 @@
 package com.pszymczyk.step3;
 
-import org.apache.kafka.clients.consumer.ConsumerRecord;
-import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.clients.consumer.OffsetAndMetadata;
 import org.apache.kafka.common.TopicPartition;
-import org.apache.kafka.common.errors.WakeupException;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 
-import static org.apache.kafka.clients.consumer.ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_ID_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG;
+import static org.apache.kafka.clients.consumer.ConsumerConfig.*;
 
-public class ConsumerLoopManualCommit implements Runnable {
+public class ConsumerLoopManualCommit implements AutoCloseable {
 
     protected static Logger logger = LoggerFactory.getLogger(ConsumerLoopManualCommit.class);
 
@@ -33,7 +26,7 @@ public class ConsumerLoopManualCommit implements Runnable {
     public ConsumerLoopManualCommit(int id, String groupId, String topic) {
         this.id = id;
         this.topic = topic;
-        Properties props = new Properties();
+        var props = new Properties();
         props.put(BOOTSTRAP_SERVERS_CONFIG, "localhost:9092");
         props.put(GROUP_ID_CONFIG, groupId);
         props.put(KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
@@ -42,43 +35,36 @@ public class ConsumerLoopManualCommit implements Runnable {
         this.consumer = new KafkaConsumer<>(props);
     }
 
-    @Override
-    public void run() {
-        try {
-            consumer.subscribe(Arrays.asList(topic));
+    public void start() {
+        consumer.subscribe(List.of(topic));
 
-            Map<Integer, Long> lastConsumedOffsetsOnPartitions = new HashMap<>();
+        Map<Integer, Long> lastConsumedOffsetsOnPartitions = new HashMap<>();
 
-            while (true) {
-                ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(Long.MAX_VALUE));
-                for (ConsumerRecord<String, String> record : records) {
-                    Map<String, Object> data = new HashMap<>();
-                    data.put("partition", record.partition());
-                    data.put("offset", record.offset());
-                    data.put("value", record.value());
-                    lastConsumedOffsetsOnPartitions.put(record.partition(), record.offset());
-                    logger.info(this.id + ": " + data);
-                }
+        while (true) {
+            var records = consumer.poll(Duration.ofMillis(Long.MAX_VALUE));
+            for (var record : records) {
+                Map<String, Object> data = new HashMap<>();
+                data.put("partition", record.partition());
+                data.put("offset", record.offset());
+                data.put("value", record.value());
+                lastConsumedOffsetsOnPartitions.put(record.partition(), record.offset());
+                logger.info("Consumer id: {}, ConsumerRecord: {}", this.id, data);
+            }
 
-                for (Map.Entry<Integer, Long> partitionAndOffset : lastConsumedOffsetsOnPartitions.entrySet()) {
-                    if (partitionAndOffset.getValue() % 5 == 0) {
-                        Map<TopicPartition, OffsetAndMetadata> offsetToCommit = Map.of(
+            for (var partitionAndOffset : lastConsumedOffsetsOnPartitions.entrySet()) {
+                if (partitionAndOffset.getValue() % 5 == 0) {
+                    Map<TopicPartition, OffsetAndMetadata> offsetToCommit = Map.of(
                             new TopicPartition(topic, partitionAndOffset.getKey()),
                             //The committed offset should always be the offset of the next message that your application will read
-                            new OffsetAndMetadata(partitionAndOffset.getValue()+1));
-                        consumer.commitSync(offsetToCommit);
-                    }
+                            new OffsetAndMetadata(partitionAndOffset.getValue() + 1));
+                    consumer.commitSync(offsetToCommit);
                 }
-
             }
-        } catch (WakeupException e) {
-            // ignore for shutdown
-        } finally {
-            consumer.close();
         }
     }
 
-    public void shutdown() {
+    @Override
+    public void close() {
         consumer.wakeup();
     }
 }
