@@ -1,66 +1,50 @@
 package com.pszymczyk.step5;
 
 import org.apache.kafka.clients.consumer.ConsumerRecord;
-import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
-import org.apache.kafka.common.errors.WakeupException;
 import org.apache.kafka.common.serialization.StringDeserializer;
 
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Properties;
-import java.util.UUID;
+import java.util.*;
 
-import static org.apache.kafka.clients.consumer.ConsumerConfig.AUTO_OFFSET_RESET_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.GROUP_ID_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG;
-import static org.apache.kafka.clients.consumer.ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG;
+import static org.apache.kafka.clients.consumer.ConsumerConfig.*;
 
-public class FirstLevelCacheBackedByKafka implements Runnable {
+public class FirstLevelCacheBackedByKafka implements AutoCloseable {
+
+    private static final Map<String, String> cache = new HashMap<>();
 
     private final KafkaConsumer<String, String> consumer;
     private final String topic;
 
-    private final Map<String, String> cache = new HashMap<>();
-
     public FirstLevelCacheBackedByKafka(String topic) {
         this.topic = topic;
-        Properties props = new Properties();
+        var props = new Properties();
         props.put(BOOTSTRAP_SERVERS_CONFIG, "localhost:9092");
-        props.put(GROUP_ID_CONFIG, "step5_"+ UUID.randomUUID().toString().substring(0, 7));
+        props.put(GROUP_ID_CONFIG, "step5_" + UUID.randomUUID().toString().substring(0, 7));
         props.put(KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
         props.put(VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
         props.put(AUTO_OFFSET_RESET_CONFIG, "earliest");
         this.consumer = new KafkaConsumer<>(props);
     }
 
-    @Override
-    public void run() {
-        try {
-            consumer.subscribe(Arrays.asList(topic));
-
-            while (true) {
-                ConsumerRecords<String, String> records = consumer.poll(Duration.ofMillis(Long.MAX_VALUE));
-                for (ConsumerRecord<String, String> record : records) {
-                    cache.put(record.key(), record.value());
-                }
+    public void start() {
+        consumer.subscribe(List.of(topic));
+        while (true) {
+            var records = consumer.poll(Duration.ofMillis(Long.MAX_VALUE));
+            for (ConsumerRecord<String, String> record : records) {
+                cache.put(record.key(), record.value());
             }
-        } catch (WakeupException e) {
-            // ignore for shutdown
-        } finally {
-            consumer.close();
         }
     }
 
+    public static Map<String, String> getCachedItems() {
+        return Map.copyOf(cache);
+    }
 
-    public void shutdown() {
+    @Override
+    public void close() {
         consumer.wakeup();
     }
 
-    public Map<String, String> getCachedItems() {
-        return cache;
-    }
+
 }
